# PongAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ball.cpp  ball.h  cameraframegrabber.cpp  cameraframegrabber.h  camerahandler.cpp  camerahandler.h  client.cpp  client.h  client.ui  imageutils.cpp  imageutils.h  inputNaufragiat.txt  main.cpp  mainNaufragiat.cpp  mainwindow.cpp  mainwindow.h  paddle.cpp  paddle.h  paddleai.cpp  paddleai.h
Game/: AnimationTest.pro  ball.cpp  ball.h  mainwindow.cpp  mainwindow.h  paddle.cpp  paddle.h
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  ui_client.h
build-dir/PongAR_autogen/: mocs_compilation.cpp
build-dir/PongAR_autogen/EWIEGA46WW/: moc_cameraframegrabber.cpp  moc_camerahandler.cpp  moc_client.cpp
